--- a/RunsheungIOS/portal/Portal/Info.plist
+++ b/RunsheungIOS/portal/Portal/Info.plist
@@ -105,6 +105,8 @@
 		<string>mqq</string>
 		<string>sinaweibo</string>
 	</array>
+	<key>LSHasLocalizedDisplayName</key>
+	<true/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -113,17 +115,17 @@
 		<true/>
 	</dict>
 	<key>NSCalendarsUsageDescription</key>
-	<string>允许Portal使用您的日历吗</string>
+	<string>允许本项目使用您的日历吗</string>
 	<key>NSCameraUsageDescription</key>
-	<string>允许Portal使用您的相机吗</string>
+	<string>允许本项目使用您的相机吗</string>
 	<key>NSContactsUsageDescription</key>
-	<string>允许Portal使用您的通讯录吗</string>
+	<string>允许本项目使用您的通讯录吗</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>允许小商工人利用您的定位吗</string>
+	<string>允许本项目利用您的定位吗</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>允许Portal使用您的麦克风吗</string>
+	<string>允许本项目使用您的麦克风吗</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>允许Portal使用您的相册吗</string>
+	<string>允许本项目使用您的相册吗</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
