托遗响于悲风 抱明月以常终

--- a/RunsheungIOS/portal/Portal/Info.plist
+++ b/RunsheungIOS/portal/Portal/Info.plist
@@ -93,6 +93,9 @@
 	<string>30</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
+		<string>ispmobile</string>
+		<string>smartxpay-transfer</string>
+		<string>lguthepay</string>
 		<string>comgooglemaps</string>
 		<string>ycapp</string>
 		<string>iosamap</string>
