--- a/RunsheungIOS/portal/Portal/Info.plist
+++ b/RunsheungIOS/portal/Portal/Info.plist
@@ -118,17 +118,22 @@
 		<true/>
 	</dict>
 	<key>NSCalendarsUsageDescription</key>
-	<string>允许本项目使用您的日历吗</string>
+	<string>앱 설치시 캘린더 사용을 허락하시겠습니까? 
+</string>
 	<key>NSCameraUsageDescription</key>
-	<string>允许本项目使用您的相机吗</string>
+	<string>앱 설치시 카메라 사용을 허락하시겠습니까?
+</string>
 	<key>NSContactsUsageDescription</key>
-	<string>允许本项目使用您的通讯录吗</string>
+	<string>앱 설치시 연락처 사용을 허락하시겠습니까?
+</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>允许本项目利用您的定位吗</string>
+	<string>위치기반정보 수집에 동의하시겠습니까?</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>允许本项目使用您的麦克风吗</string>
+	<string>앱 설치시 마이크 사용을 허락하시겠습니까?
+</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>允许本项目使用您的相册吗</string>
+	<string>앱 설치시 사진/앨범 사용을 허락하시겠습니까?
+</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
