--- a/RunsheungIOS/portal/Podfile
+++ b/RunsheungIOS/portal/Podfile
@@ -6,8 +6,6 @@ target 'Portal' do
   use_frameworks!
 
   # Pods for Portal
- 
-
   pod 'Kingfisher'
   pod 'SnapKit'
   pod 'SwiftyJSON'
@@ -28,6 +26,9 @@ target 'Portal' do
   pod 'FSPagerView'
   pod 'MJRefresh'
   pod 'TPKeyboardAvoiding'
+  pod 'GDataXML-HTML', '~> 1.4.1'
+  
+
   
 
 
