--- a/RunsheungIOS/portal/Portal/Info.plist
+++ b/RunsheungIOS/portal/Portal/Info.plist
@@ -125,6 +125,10 @@
 	<key>NSContactsUsageDescription</key>
 	<string>앱 설치시 연락처 사용을 허락하시겠습니까?
 </string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>기기 위치정보를 통한 주변상가 검색 및 마케팅/이벤트 정보 수신에 동의함</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>기기 위치정보를 통한 주변상가 검색 및 마케팅/이벤트 정보 수신에 동의함</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>기기 위치정보를 통한 주변상가 검색 및 마케팅/이벤트 정보 수신에 동의함</string>
 	<key>NSMicrophoneUsageDescription</key>
